--- a/docker-compose-backend.yml
+++ b/docker-compose-backend.yml
@@ -5,12 +5,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      # 👇 1
     environment:
-        - 'NODE_ENV=production'
-        - 'PORT=3000'
-        - 'CORS_ORIGINS=["http://localhost:5173", "http://localhost"]' 
-        - 'CORS_MAX_AGE=10800'
-        - 'DATABASE_URL=mysql://devusr:devpwd@host.docker.internal:3307/budget' 
-        - 'AUTH_JWT_SECRET=eensuperveiligsecretvoorindevelopment'
+      NODE_ENV: production
+      PORT: "3000"
+      CORS_ORIGINS: "[\"http://localhost:5173\", \"http://localhost\"]"
+      CORS_MAX_AGE: 10800
+      DATABASE_URL: mysql://devusr:devpwd@host.docker.internal:3307/budget
+      AUTH_JWT_SECRET: eensuperveiligsecretvoorindevelopment
     ports:
       - '3000:3000'
